change header and css

--- a/docker-flask-template/static/style/style.css
+++ b/docker-flask-template/static/style/style.css
@@ -1,18 +1,125 @@
-body {
-    background-color: #D9DFE8;
-    margin: 5% 20%;
-}
-
-.header img {
-  float: left;
-}
-
-.header h1 {
+h1 {
+   padding: 0px 20px;
     font-family: 'Montserrat', sans-serif;
-    position: relative;
+    font-weight:bold
 }
 
-.header h2 {
+h2 {
+    padding: 0px 120px;
     font-family: 'Montserrat', sans-serif;
-    position: relative;
+}
+
+.returnBox{
+    padding: 0px 0px;
+}
+
+.clientBox h2 {
+    margin: 0px 0px;
+}
+
+p {
+    padding: 5px 150px;
+    font-family: 'Mukta', sans-serif;
+}
+
+.clientBox p {
+    margin: 0px 0px;
+}
+
+textarea {
+    font-size: 12px;
+}
+
+ul {
+    padding: 1px 165px;
+    font-family: 'Mukta', sans-serif;
+}
+
+p.side {
+    padding: 5px 130px 0px 150px;
+    display: inline-block;
+}
+
+iframe {
+    background-color: #F5F5F5;
+}
+
+div.background {
+    overflow: auto;
+    background-color: #f9f7f4;
+    padding: 20px 0px;
+    width: 100%;
+}
+
+div.clientBox {
+    background-color: #f9f7f4;
+    float: left;
+    width: 50%;
+}
+
+div.clientBoxR {
+    background-color: #f9f7f4;
+    /*float: ;*/
+    width: 100%;
+}
+
+
+div.return {
+    /*margin: 2px 0px 0px 2px;*/
+    border-width: 2px 0px 0px 2px;
+    border-style: solid;
+    border-color: #6c6c6c;
+    margin: 0px 30px;
+    overflow-y: scroll;
+    width: 85%;
+    height: 500px;
+    background-color: #FFF;
+}
+
+div#request {
+    margin: 0px 0px 10px 150px;
+    padding: 1px 5px;
+    border-width: 2px 0px 0px 2px;
+    border-style: solid;
+    border-color: #6c6c6c;
+    overflow: hidden;
+    overflow-x: scroll;
+    width: 75%;
+    height: 50px;
+    background-color: #F5F5F5;
+}
+
+img#loading {
+    display: none;
+}
+
+#version {
+    font-family: "Montserrat", sans-serif;
+    color: grey;
+    font-size: 20px;
+
+}
+
+.accordion {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px 130px 18px 150px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+}
+
+.active, .accordion:hover {
+  background-color: #ccc;
+}
+
+.panel {
+  padding: 0 18px;
+  display: none;
+  background-color: white;
+  overflow: hidden;
 }
