--- a/docker-flask-template/templates/home.html
+++ b/docker-flask-template/templates/home.html
@@ -7,7 +7,7 @@
         var page_url = window.location.protocol + "//" + window.location.host + window.location.pathname;
     </script>
     <link id='style' rel="stylesheet" href="static/style/style.css">
-	<script>document.getElementById("style").href = page_url + "/static/style/style.css"</script>
+	<script>document.getElementById("style").href = page_url + "static/style/style.css"</script>
     <script>
     var methodname = "{{ methodname }}/"; // from render_template function input in app.py
     var url = page_url + methodname;
