--- a/docker-flask-template/static/style/style.css
+++ b/docker-flask-template/static/style/style.css
@@ -13,13 +13,23 @@ h2 {
     padding: 0px 0px;
 }
 
-.clientBox h2 {
-    margin: 0px 0px;
+.returnBox h2{
+    padding: 0px 0px;
+    margin: 0px 130px 0px 30px;
+}
+
+.background h2 {
+    margin: 0px 130px 0px 150px;
+    padding: 0px 0px 0px 0px;
 }
 
 p {
     padding: 5px 150px;
     font-family: 'Mukta', sans-serif;
+}
+
+#return {
+    margin: 0px 0px 10px 0px;
 }
 
 .clientBox p {
@@ -28,6 +38,8 @@ p {
 
 textarea {
     font-size: 12px;
+    width: 95%;
+    height: 440px;
 }
 
 ul {
@@ -36,7 +48,7 @@ ul {
 }
 
 p.side {
-    padding: 5px 130px 0px 150px;
+    padding: 5px 50px 0px 150px;
     display: inline-block;
 }
 
@@ -49,6 +61,7 @@ div.background {
     background-color: #f9f7f4;
     padding: 20px 0px;
     width: 100%;
+    height: 100%;
 }
 
 div.clientBox {
@@ -59,8 +72,8 @@ div.clientBox {
 
 div.clientBoxR {
     background-color: #f9f7f4;
-    /*float: ;*/
-    width: 100%;
+    float: left;
+    width: 50%;
 }
 
 
@@ -69,12 +82,13 @@ div.return {
     border-width: 2px 0px 0px 2px;
     border-style: solid;
     border-color: #6c6c6c;
-    margin: 0px 30px;
+    margin: 0px 30px 0px 0px;
     overflow-y: scroll;
     width: 85%;
     height: 500px;
     background-color: #FFF;
 }
+/*height: 500px;*/
 
 div#request {
     margin: 0px 0px 10px 150px;
